neutrine: fixed toast align classnames

--- a/packages/neutrine/src/widgets/toast/style.scss
+++ b/packages/neutrine/src/widgets/toast/style.scss
@@ -35,12 +35,12 @@ $neutrine-toast-offset: 15px;
         left: 50%;
     }
     //Left aligned bottom toast
-    &--bottom-left {
+    &--left {
         //bottom: -50%;
         left: $neutrine-toast-offset;
     }
     //Right aligned bottom toast
-    &--bottom-right {
+    &--right {
         //bottom: -50%;
         right: $neutrine-toast-offset;
     }
